--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/react-katex": "^3.0.0",
+    "@types/react-latex": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-katex": "^3.0.1",
     "typescript": "5.1.6"
   }
 }
