--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-latex": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "katex": "^0.16.8",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
