--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react-latex": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "immer": "^10.0.2",
     "katex": "^0.16.8",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-katex": "^3.0.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   }
 }
