--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.6",
     "@types/react-katex": "^3.0.0",
     "@types/react-latex": "^2.0.0",
+    "@vercel/analytics": "^1.2.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "katex": "^0.16.8",
